--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy to github pages
 
 on:
   push:
-    branches: [ main ]
+    branches: [ ignore-all ]
 
 jobs:
   deploy-to-github-pages:
