--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,6 @@ name: Deploy to github pages
 
 on:
   push:
-    branches: [main]
 
 jobs:
   deploy-to-github-pages:
@@ -19,8 +18,8 @@ jobs:
       - name: Publish .NET Core Project
         run: dotnet publish ./src/BlazorDatasheet.Wasm/BlazorDatasheet.Wasm.csproj -c Release -o release --nologo
 
-      - name: Change base-tag in index.html from / to BlazorDatasheet
-        run: sed -i 's/<base href="\/" \/>/<base href="\/BlazorDatasheet\/" \/>/g' release/wwwroot/index.html
+      - name: Change base-tag in index.html from / to RandomGroup
+        run: sed -i 's/<base href="\/" \/>/<base href="\/RandomGroup\/" \/>/g' release/wwwroot/index.html
 
       - name: Add .nojekyll file
         run: touch release/wwwroot/.nojekyll
