--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy to github pages
 
 on:
   push:
-
+    branches: [main]
 jobs:
   deploy-to-github-pages:
     # use ubuntu-latest image to run steps on
